Se resolvieron todos los ejercicios del modulo 3

--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 1\n",
+    "print(num)"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "constante = 8.5\n",
+    "type(constante)"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +73,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(num)"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "David\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'David'\n",
+    "print(nombre)"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10-10j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = complex(10, -10)\n",
+    "print(b)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(b))"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1415\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.1415\n",
+    "print(pi)"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +204,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variable_verdadera = True\n",
+    "variable_no_cierta = 'True'\n"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(variable_no_cierta))\n",
+    "print(type(variable_verdadera))"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.1415\n"
+     ]
+    }
+   ],
+   "source": [
+    "suma = 5 + 3.1415\n",
+    "print(suma)"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10+5j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "complejo = complex(10, 5)\n",
+    "print(complejo)"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +301,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15-10j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = complex(10, -10)\n",
+    "c = a + b\n",
+    "print(c)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = 7\n",
+    "e = 8\n",
+    "multiplicacion = d * e\n",
+    "print(multiplicacion)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +357,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "potencia = 2 ** 8\n",
+    "print(potencia)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +383,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "division = 27 / 4\n",
+    "print(division)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(division))"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +434,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "division_1 = 27 % 4\n",
+    "print(division_1)"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +460,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "operandos = (4 * int(division)) + division_1\n",
+    "print(operandos)"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +501,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"2\" == 2 # Es falso porque s ecompara un string con un numero"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"2\") == 2"
+   ]
   },
   {
    "attachments": {},
@@ -336,7 +560,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Porque se encuentra entre comillas."
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +574,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-138\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = 3\n",
+    "g -= h\n",
+    "\n",
+    "print(g)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +602,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 << 2 # Como resultado da 4, porque es un sistema de desplazamiento en bits: \n",
+    "\n",
+    "# Son operadores de desplazamiento de bits que existen en muchos lenguajes de programación principales, <<es el desplazamiento a la izquierda y >>el desplazamiento a la derecha, se pueden demostrar en la siguiente tabla, suponga que un número entero solo ocupa 1 byte en la memoria."
+   ]
   },
   {
    "attachments": {},
@@ -381,7 +635,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2 + '2' # No esta permitido porque '2' no es un entero. No se pueden sumar 2 string sin antes pasarlos a enteros. Por lo tanto la suma solo tienen que ser de numero esteros."
+   ]
   },
   {
    "attachments": {},
@@ -389,6 +645,24 @@
    "metadata": {},
    "source": [
     "26) Realizar una operación válida entre valores de tipo entero y string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "operacion_verdadera = 2 + int('2')\n",
+    "print(operacion_verdadera)"
    ]
   },
   {
@@ -418,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
