--- a/M02_introprogramación/Practica.ipynb
+++ b/M02_introprogramación/Practica.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeros pasos en Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,21 +18,6 @@
      "output_type": "stream",
      "text": [
       "Hola Mundo!\n",
-      "20\n",
-      "19\n",
-      "18\n",
-      "17\n",
-      "16\n",
-      "15\n",
-      "14\n",
-      "13\n",
-      "12\n",
-      "11\n",
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
       "5\n",
       "4\n",
       "3\n",
@@ -35,11 +28,35 @@
    ],
    "source": [
     "print('Hola Mundo!')\n",
-    "a = 20\n",
+    "a = 5\n",
     "while a > 0:\n",
     "    print(a)\n",
     "    a -= 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hola mundo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -58,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
