Se resolvió el modulo 4

--- a/M03_variablesydatos/Prep_Course_Homework_03.ipynb
+++ b/M03_variablesydatos/Prep_Course_Homework_03.ipynb
@@ -127,19 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10-10j)\n"
+      "(5+5j)\n"
      ]
     }
    ],
    "source": [
-    "b = complex(10, -10)\n",
+    "b = 5 + 5j\n",
     "print(b)"
    ]
   },
@@ -153,19 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'complex'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(type(b))"
+    "type(b)"
    ]
   },
   {
@@ -301,20 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15-10j)\n"
+      "(8+1j)\n"
      ]
     }
    ],
    "source": [
     "a = 5\n",
-    "b = complex(10, -10)\n",
+    "b = 3 + 1j\n",
     "c = a + b\n",
     "print(c)"
    ]
@@ -409,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +424,7 @@
     }
    ],
    "source": [
-    "print(int(division))"
+    "print(27 // 4)"
    ]
   },
   {
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -446,8 +449,7 @@
     }
    ],
    "source": [
-    "division_1 = 27 % 4\n",
-    "print(division_1)"
+    "print(27 % 4)"
    ]
   },
   {
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
     }
    ],
    "source": [
-    "operandos = (4 * int(division)) + division_1\n",
+    "operandos = (4 * (27//4)) + (27%4)\n",
     "print(operandos)"
    ]
   },
@@ -486,10 +488,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "David Perren\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1 = 'David '\n",
+    "var2 = 'Perren'\n",
+    "print(var1 + var2)"
+   ]
   },
   {
    "attachments": {},
@@ -574,22 +588,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-138\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "h = 3\n",
-    "g -= h\n",
+    "h -= 1\n",
     "\n",
-    "print(g)"
+    "print(h)"
    ]
   },
   {
@@ -663,6 +677,34 @@
    "source": [
     "operacion_verdadera = 2 + int('2')\n",
     "print(operacion_verdadera)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = 'Este texto se repite '\n",
+    "v2 = 3\n",
+    "frase = f\"{v1}{v2} veces\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este texto se repite 3 veces\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frase)"
    ]
   },
   {
