--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El 0 es 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "elemento = 0\n",
+    "if elemento > 0:\n",
+    "    print(f'El {elemento} es mayor que 0')\n",
+    "elif elemento < 0:\n",
+    "    print(f'El {elemento} es menor a 0')\n",
+    "else:\n",
+    "    print(f'El {elemento} es 0')"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +49,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las variables son diferentes\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1 = True\n",
+    "var2 = 3\n",
+    "\n",
+    "if type(var1) == type(var2):\n",
+    "    print('Las variables son iguales')\n",
+    "else:\n",
+    "    print('Las variables son diferentes')\n"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el número 1 es impar\n",
+      "el número 2 es par\n",
+      "el número 3 es impar\n",
+      "el número 4 es par\n",
+      "el número 5 es impar\n",
+      "el número 6 es par\n",
+      "el número 7 es impar\n",
+      "el número 8 es par\n",
+      "el número 9 es impar\n",
+      "el número 10 es par\n",
+      "el número 11 es impar\n",
+      "el número 12 es par\n",
+      "el número 13 es impar\n",
+      "el número 14 es par\n",
+      "el número 15 es impar\n",
+      "el número 16 es par\n",
+      "el número 17 es impar\n",
+      "el número 18 es par\n",
+      "el número 19 es impar\n",
+      "el número 20 es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    resto = i % 2\n",
+    "    if resto == 0:\n",
+    "        print(f\"el número {i} es par\")\n",
+    "    else:\n",
+    "        print(f\"el número {i} es impar\")"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el valor de 0 elevado a la 3ra potencia es 0\n",
+      "el valor de 1 elevado a la 3ra potencia es 1\n",
+      "el valor de 2 elevado a la 3ra potencia es 8\n",
+      "el valor de 3 elevado a la 3ra potencia es 27\n",
+      "el valor de 4 elevado a la 3ra potencia es 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 5):\n",
+    "    potencia = i**3\n",
+    "    print(f\"el valor de {i} elevado a la 3ra potencia es {potencia}\")\n"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estamos en el numero de ciclo 1\n",
+      "Estamos en el numero de ciclo 2\n",
+      "Estamos en el numero de ciclo 3\n",
+      "Estamos en el numero de ciclo 4\n",
+      "Estamos en el numero de ciclo 5\n",
+      "Estamos en el numero de ciclo 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 6\n",
+    "for i in range(1, x + 1):\n",
+    "    print(f\"Estamos en el numero de ciclo {i}\")"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 5\n",
+    "factorial = 1\n",
+    "\n",
+    "if type(numero) == int and numero>0:\n",
+    "    while numero >= 1:\n",
+    "        factorial = numero * factorial\n",
+    "        numero -= 1\n",
+    "print(factorial)"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +224,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciclo while numero: 1\n",
+      "ciclo for numero: 1\n",
+      "ciclo while numero: 2\n",
+      "ciclo for numero: 1\n",
+      "ciclo for numero: 2\n",
+      "ciclo while numero: 3\n",
+      "ciclo for numero: 1\n",
+      "ciclo for numero: 2\n",
+      "ciclo for numero: 3\n",
+      "ciclo while numero: 4\n",
+      "ciclo for numero: 1\n",
+      "ciclo for numero: 2\n",
+      "ciclo for numero: 3\n",
+      "ciclo for numero: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "\n",
+    "while n < 5:\n",
+    "    print(f'ciclo while numero: {n}')\n",
+    "    for i in range(1, n+1):\n",
+    "        print(f'ciclo for numero: {i}')\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +268,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ciclo for: 0\n",
+      "ciclo while: 0\n",
+      "ciclo while: 1\n",
+      "ciclo while: 2\n",
+      "ciclo for: 1\n",
+      "ciclo while: 0\n",
+      "ciclo while: 1\n",
+      "ciclo while: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 2\n",
+    "\n",
+    "for i in range(n):\n",
+    "    contador = 0\n",
+    "    limite = 3\n",
+    "    print(f'ciclo for: {i}')\n",
+    "    while contador < limite:\n",
+    "        print(f'ciclo while: {contador}')\n",
+    "        contador += 1"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +308,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope = 30\n",
+    "n = 2\n",
+    "primo = True\n",
+    "\n",
+    "while n <= tope:\n",
+    "    for div in range(2, n):\n",
+    "        resto = n % div\n",
+    "        if resto == 0:\n",
+    "            primo = False\n",
+    "    if primo:\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +355,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "tope = 30\n",
+    "n = 2\n",
+    "primo = True\n",
+    "\n",
+    "while n <= tope:\n",
+    "    for div in range(2, n):\n",
+    "        resto = n % div\n",
+    "        if resto == 0:\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if primo:\n",
+    "        print(n)\n",
+    "    else:\n",
+    "        primo = True\n",
+    "    n += 1"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +433,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109 es divisible por 12\n",
+      "121 es divisible por 12\n",
+      "133 es divisible por 12\n",
+      "145 es divisible por 12\n",
+      "157 es divisible por 12\n",
+      "169 es divisible por 12\n",
+      "181 es divisible por 12\n",
+      "193 es divisible por 12\n",
+      "205 es divisible por 12\n",
+      "217 es divisible por 12\n",
+      "229 es divisible por 12\n",
+      "241 es divisible por 12\n",
+      "253 es divisible por 12\n",
+      "265 es divisible por 12\n",
+      "277 es divisible por 12\n",
+      "289 es divisible por 12\n",
+      "301 es divisible por 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "while n <= 300:\n",
+    "    resto = n % 12\n",
+    "    n += 1\n",
+    "    if resto != 0:\n",
+    "        continue\n",
+    "    print(f'{n} es divisible por 12')"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +495,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero es: 102\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "while (n <= 300):\n",
+    "    if (n % 6 == 0):\n",
+    "        print(f'el numero es: {n}')\n",
+    "        break\n",
+    "    n += 1"
+   ]
   }
  ],
  "metadata": {
@@ -253,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
