--- a/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
+++ b/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
@@ -18,10 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rafaela', 'Sunchales', 'Esperanza', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco']\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades = ['Rafaela', 'Sunchales', 'Esperanza', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco']\n",
+    "print(ciudades)\n",
+    "print(type(ciudades))"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunchales\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades[1])"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esperanza', 'Santa Fe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades[2:4])"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(ciudades))"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esperanza', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades[2:])"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rafaela', 'Sunchales', 'Esperanza', 'Santa Fe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades[:4])"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ciudades.append('Rafaela')\n",
+    "ciudades.append('Mendoza')"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rafaela', 'Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Rafaela', 'Mendoza']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.insert(3, 'San Guillermo')\n",
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rafaela', 'Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Susana', 'Roca', 'Mendoza']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades2 = ['Susana', 'Roca', 'Mendoza']\n",
+    "lista_final = ciudades + ciudades2\n",
+    "print(lista_final)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +242,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ciudades.index('Rafaela'))"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +267,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'Portugal' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ciudades\u001b[39m.\u001b[39;49mindex(\u001b[39m'\u001b[39;49m\u001b[39mPortugal\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Portugal' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.index('Portugal')"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Mendoza']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.remove('Rafaela')\n",
+    "print(ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +322,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ciudades\u001b[39m.\u001b[39;49mremove(\u001b[39m'\u001b[39;49m\u001b[39mPortugal\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "ciudades.remove('Portugal')"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mendoza\n"
+     ]
+    }
+   ],
+   "source": [
+    "ultimo = ciudades.pop()\n",
+    "print(ultimo)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +377,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_por4 = ciudades * 4\n",
+    "print(lista_por4)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +403,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = (1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20)\n",
+    "print(tupla)\n",
+    "print(type(tupla))"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tupla[10:16])"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 in tupla)\n",
+    "print(30 in tupla)"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +483,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "['Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Paris']\n"
+     ]
+    }
+   ],
+   "source": [
+    "esta_paris = 'Paris' in ciudades\n",
+    "print(esta_paris)\n",
+    "\n",
+    "if esta_paris == False:\n",
+    "    ciudades.append('Paris')\n",
+    "    print(ciudades)\n"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +514,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista_por4.count('Rafaela'))\n",
+    "print(tupla.count('1'))"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +541,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "nueva_lista = list(tupla)\n",
+    "print(nueva_lista)\n",
+    "print(type(nueva_lista))"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +569,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1, var2, var3, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, _, = tupla\n",
+    "print(var1, var2, var3)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +595,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'Sunchales', 1: 'Esperanza', 2: 'San Guillermo', 3: 'San Guillermo', 4: 'San Guillermo', 5: 'Santa Fe', 6: 'Crespo', 7: 'Susana', 8: 'Morteros', 9: 'San Francisco', 10: 'Rafaela', 11: 'Paris'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario = dict(enumerate(ciudades))\n",
+    "\n",
+    "print(diccionario)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +622,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
+      "dict_values(['Sunchales', 'Esperanza', 'San Guillermo', 'San Guillermo', 'San Guillermo', 'Santa Fe', 'Crespo', 'Susana', 'Morteros', 'San Francisco', 'Rafaela', 'Paris'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diccionario.keys())\n",
+    "print(diccionario.values())"
+   ]
   },
   {
    "attachments": {},
@@ -374,6 +645,49 @@
    "metadata": {},
    "source": [
     "25) Imprimir las ciudades a través de su clave"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Guillermo\n"
+     ]
+    }
+   ],
+   "source": [
+    "clave = 2\n",
+    "\n",
+    "if clave in diccionario:\n",
+    "    ciudad = diccionario[clave]\n",
+    "    print(ciudad)\n",
+    "else:\n",
+    "    print(\"La clave no existe en el diccionario.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'San Guillermo'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario[2]"
    ]
   },
   {
@@ -403,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
